# trio-cluster

./: environment.yml  pyproject.toml
trio_cluster/: __init__.py  _client_handle.py  _connected_client.py  _duplex_connection.py  _exc.py  _message.py  client.py  cluster_manager.py  cluster_worker.py  constants.py  message.py  server.py  utils.py  work_fn.py
trio_cluster/scripts/: _constants.py  server.py  worker.py
