[tool.poetry]
name = "trio-cluster-example"
version = "0.1.0"
description = "A simple TCP supervisor-worker implementation in trio."
authors = ["Jamie Bayne <jamiebayne@hotmail.com"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.7"
trio = "^0.19"
trio-parallel = "^0.5"
trio-util = "^0.6"
cloudpickle = "^2"

[tool.poetry.scripts]
trio-server = 'trio_cluster.scripts.server:main'
trio-worker = 'trio_cluster.scripts.worker:main'
