[tool.poetry]
name = "trio-cluster"
version = "0.1.0"
description = "A simple TCP supervisor-worker + P2P implementation in trio."
authors = ["Jamie Bayne <jamiebayne@hotmail.com>"]
packages = [
    { include = "trio_cluster" }
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
trio = "^0.24"
trio-parallel = "^1.2"
cloudpickle = "^2"
msgpack = "^1.0"

[tool.poetry.scripts]
trio-server = 'trio_cluster.scripts.server:main'
trio-worker = 'trio_cluster.scripts.worker:main'
